Fixed journal and fixed title

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ changefreq: daily
             </div>
             <!-- UPDATED SIZE: Significantly reduced to text-2xl/3xl/5xl to ensure single-line display -->
             <h1 class="text-2xl sm:text-3xl md:text-5xl font-display font-bold leading-[0.9] tracking-tight">
-                <span class="whitespace-nowrap">Create Your Opus. Make It Epic. Patchable Guitar Pedals for Sonic Adventurers.</span><br>
-                <span class="text-gradient glitch-hover cursor-default whitespace-nowrap">SHAPE YOUR BLISS.</span>
+                <span class="whitespace-nowrap">CREATE YOUR OPUS</span><br>
+                <span class="text-gradient glitch-hover cursor-default whitespace-nowrap">MAKE IT EPIC</span>
             </h1>
             <p class="text-base md:text-lg text-text-muted max-w-md mx-auto lg:mx-0 leading-relaxed">
-                For those who believe sound deserves attention.
+                Patchable Guitar Pedals for Sonic Adventurers.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 pt-4 justify-center lg:justify-start">
                 <a href="#products" class="px-8 py-4 bg-brand-gold text-brand-dark font-bold rounded-sm hover:bg-white transition-all duration-300 flex items-center justify-center gap-2 tracking-widest uppercase text-sm">
